--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php" : "^7.2"
+        "php" : "^7.2",
+        "illuminate/support": "^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -19,7 +20,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "2.0.1-dev"
         },
         "laravel": {
             "providers": [
